Changelog
=========

1.1.1 (unreleased)
----------------

- Fixed case profile doesn't exist on runUpgradeStep method.
  [thomasdesvenain]


1.1 (2012-10-05)
----------------

- monkey patch EtagSupport.http__refreshEtag during content migrations
  to not modify objects.
  [vincentfretin]

- Added a parameter to stop migration after n contents migrated.
  [thomasdesvenain]


1.0.1 (2012-09-03)
------------------

- Fixed run profile.


1.0 (2012-08-24)
----------------

- Package created using templer
  []